# voicecryptobox

./: .gitignore  AUTHORS  COPYING  Makefile  Makefile.am  Makefile.in  NSA-Fix.desktop  README  README.md  a1.conf  a2.conf  a3.conf  aclocal.m4  alpha-1.conf  audioengine  audioengine-sink.conf  audioengine-source.conf  audioengine.c.save  audiohub  audiopipe-sink.conf  audiopipe-source.conf  cacert.pem  conference_crt.pem  conference_key.pem  config.h  config.h.in  config.status  configure  configure.ac  edon_crt.pem  edon_key.pem  mjp_crt.pem  mjp_key.pem  nsafix.sh  paudioengine.pl  pepper_crt.pem  pepper_key.pem  server5_crt.pem  server5_key.pem  server6_crt.pem  (+1 more)
ca/: DISCLAIMER  DISCLAIMER~  alpha-1_crt.pem  alpha-1_key.pem  alpha-2_crt.pem  alpha-2_key.pem  alpha-3_key.pem  alpha-4_crt.pem  alpha-4_key.pem  alpha-5_crt.pem  alpha-5_key.pem  bravo-1_key.pem  caconfig.cnf  conference_crt.pem  conference_key.pem  index.txt  index.txt.old  server.cnf  tempkey.pem  tempreq.pem
ca/private/: cakey.pem
ca/signedcerts/: 03.pem  07.pem
logo-graphics/Source Material/: free-vector-denied_100611_Denied.xcf
src/: #pcm.c#  audio-in.c  audioengine.c  audioengine.c.save  audioengine.py  audiohub  audiohub.c  audiohub.c.save  audiohub2.c  bridge.c  bridge.h  call.c  call.h  hubnet.c  hubnet.h  list.h  listtest.c  net_io.c  opusdec.c  opusdec_engine.c  opusenc.c  opusenc.c.save  pcm.c  pcm.h  peer.h  peers.c  sched.c
src/.deps/: audio-in.Po  audioengine.Po  audiohub2.Po  call.Po  diag_range.Po  hubnet.Po  lpc.Po  net_io.Po  opus_header.Po  opusdec.Po  opusdec_engine.Po  opusenc.Po  pcm.Po  peers.Po  resample.Po  sched.Po  wav_io.Po  wave_out.Po
webui/: answer.php  call.php  hangup.php  index.php  peerlist.php  status.php
win32/.deps/: unicode_support.Po
